bk_ida/gobmkida/c0/propagate_worm2
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/propagate_worm2/src/engine/worm.c:1676:41: error: use of undeclared identifier 'worm_data'
memcpy( &worm[pos], &worm[str], sizeof( worm_data)); 
                                        ^
1 error generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/propagate_worm2/src/obj/1/worm.o] Error 1
